--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -8,8 +8,16 @@ ja:
       title: 'ユーザー登録'
       create_user: '登録'
       to_login: 'ログインページへ'
+    create:
+      success: 'ユーザー登録が完了しました'
+      aleat: 'ユーザー登録に失敗しました'
   user_sessions:
     new:
       title: 'ログイン'
       create_user: '登録ページへ'
       password_forget: 'パスワードをお忘れの方はこちら'
+    create:
+      success: 'ログインしました'
+      aleat: 'ログインに失敗しました'
+    destroy:
+      success: 'ログアウトしました'
