--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     models:
       user: 'ユーザー'
+      board: '掲示板'
     attributes:
       user:
         id: 'ID'
@@ -10,7 +11,9 @@ ja:
         email: 'メールアドレス'
         password: 'パスワード'
         password_confirmation: 'パスワード確認'
-        
+      board:
+        title: 'タイトル'
+        body: '本文'
 
   attributes:
     created_at: '作成日'
