--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -3,6 +3,10 @@ ja:
     login: 'ログイン'
     register: '登録'
     logout: 'ログアウト'
+    to_boards: '掲示板一覧'
+    create_boards: '掲示板作成'
+    message:
+      require_login: 'ログインしてください'
   users:
     new:
       title: 'ユーザー登録'
@@ -21,3 +25,7 @@ ja:
       aleat: 'ログインに失敗しました'
     destroy:
       success: 'ログアウトしました'
+  boards:
+    index:
+      title: '掲示板一覧'
+      no_board: '掲示板がありません'
