--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -7,6 +7,8 @@ ja:
     create_boards: '掲示板作成'
     message:
       require_login: 'ログインしてください'
+      created: "%{item}を作成しました"
+      not_created: "%{item}を作成できませんでした"
   users:
     new:
       title: 'ユーザー登録'
@@ -33,6 +35,8 @@ ja:
       no_board: '掲示板がありません'
     new:
       title: '掲示板作成'
-    create:
-      success: '掲示板を作成しました'
-      aleat: '掲示板を作成できませんでした'
+    show:
+      title: '掲示板詳細'
+  comments:
+    form:
+      register: '投稿'
