Chap14　掲示板の編集、削除

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -16,6 +16,8 @@ ja:
         title: 'タイトル'
         body: '本文'
         board_image: 'サムネイル'
+        create: '登録する'
+        update: '更新する'
       comment:
         body: 'コメント'
 
