Chap15 ブックマーク機能の追加　解答例

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -43,14 +43,14 @@ ja:
       title: '掲示板詳細'
     edit:
       title: '掲示板編集'
+    bookmarks:
+      title: 'ブックマーク一覧'
+      no_result: 'ブックマーク中の掲示板がありません'
   comments:
     form:
       register: '投稿'
   bookmarks:
     create:
-      registered: 'ブックマークしました'
+      success: 'ブックマークしました'
     destroy:
-      unregistered: 'ブックマークを外しました'
-    index:
-      title: 'ブックマーク一覧'
-      no_board: 'ブックマーク中の掲示板がありません'
+      success: 'ブックマークを外しました'
