Chap20 プロフィールの編集

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -55,3 +55,9 @@ ja:
       success: 'ブックマークしました'
     destroy:
       success: 'ブックマークを外しました'
+  profiles:
+    show:
+      title: 'プロフィール'
+      edit: '編集'
+    edit:
+      title: 'プロフィール編集'
